--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CatalinStefanAndroidCourse</string>
+    <string name="default_error_text">error message placeholder</string>
 </resources>
