--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">CatalinStefanAndroidCourse</string>
     <string name="default_error_text">error message placeholder</string>
+    <string name="country">Country</string>
+    <string name="capital">Capital</string>
+    <string name="country_flag">country flag</string>
 </resources>
